--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ certifi==2017.7.27.1
 click==6.7
 Flask==0.12.2
 Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+PyMySQL==0.7.11
+SQLAlchemy==1.1.14
 Werkzeug==0.12.2
