--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,38 @@
+alembic==0.9.6
+appnope==0.1.0
+backports.shutil-get-terminal-size==1.0.0
 certifi==2017.7.27.1
 click==6.7
+configparser==3.5.0
+decorator==4.1.2
+enum34==1.1.6
+flake8==3.5.0
 Flask==0.12.2
+Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+ipython==5.5.0
+ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.9.6
+Mako==1.0.7
 MarkupSafe==1.0
+mccabe==0.6.1
+pathlib2==2.3.0
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
+Pygments==2.2.0
 PyMySQL==0.7.11
+python-dateutil==2.6.1
+python-editor==1.0.3
+scandir==1.6
+simplegeneric==0.8.1
+six==1.11.0
 SQLAlchemy==1.1.14
+traitlets==4.3.2
+wcwidth==0.1.7
 Werkzeug==0.12.2
